--- a/index.html
+++ b/index.html
@@ -1,32 +1,423 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <title>SEA TEST</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+  <title>SEA Forms (RED TEST)</title>
+
+  <!-- PWA -->
+  <meta name="theme-color" content="#ff0000" />
+  <link rel="manifest" href="manifest.json">
+  <link rel="icon" href="icons/icon-192.png">
+
+  <!-- iOS Home Screen -->
+  <link rel="apple-touch-icon" sizes="180x180" href="icons/icon-180.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="SEA Forms">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
   <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      background: red;
+    :root{
+      --gold-1:#ffffff;
+      --gold-2:#fdf7e3;
+      --gold-3:#f2e2a6;
+      --gold-4:#e7c96b;
+      --gold-ink:#8b6b12;
+
+      --text:#111;
+      --muted:rgba(17,17,17,.62);
+
+      --radius:22px;
+      --shadow:0 18px 45px rgba(0,0,0,.12);
+      --stroke:rgba(0,0,0,.08);
     }
 
-    body {
-      min-height: 100svh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-family: -apple-system, system-ui, Arial;
-      color: white;
-      font-size: 22px;
-      text-align: center;
+    *{ box-sizing:border-box; }
+
+    /* ✅ FULL RED BACKGROUND TEST (no gradients, no pseudo layers) */
+    html, body{
+      height:100%;
+      margin:0;
+      padding:0;
+      background:#ff0000 !important;
+      overscroll-behavior:none;
+    }
+
+    /* make sure no previous background layer can appear */
+    html::before, body::before{ content:none !important; background:none !important; }
+
+    body{
+      min-height:100svh;
+      font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial;
+      color:var(--text);
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
+    }
+
+    .wrap{
+      max-width:820px;
+      margin:0 auto;
+      padding:
+        calc(18px + env(safe-area-inset-top))
+        16px
+        calc(34px + env(safe-area-inset-bottom));
+      display:block;
+    }
+
+    .card{
+      background:rgba(255,255,255,.92);
+      border:1px solid var(--stroke);
+      border-radius:var(--radius);
+      box-shadow:var(--shadow);
+      overflow:hidden;
+      position:relative;
+      backdrop-filter: blur(12px);
+      -webkit-backdrop-filter: blur(12px);
+    }
+
+    /* Remove decorative background inside card too (keep it plain) */
+    .card:before{ content:none !important; }
+
+    .header{
+      position:sticky;
+      top:0;
+      z-index:50;
+      padding:16px;
+      background:rgba(255,255,255,.96);
+      border-bottom:1px solid rgba(0,0,0,.06);
+      box-shadow: 0 12px 30px rgba(0,0,0,.08);
+      backdrop-filter: blur(16px);
+      -webkit-backdrop-filter: blur(16px);
+    }
+
+    .top{
+      display:flex;
+      gap:14px;
+      align-items:center;
+    }
+
+    .logo{
+      width:64px;
+      height:64px;
+      border-radius:18px;
+      overflow:hidden;
+      background:transparent;
+      flex:0 0 auto;
+    }
+    .logo img{
+      width:100%;
+      height:100%;
+      object-fit:contain;
+      display:block;
+    }
+
+    .titles h1{
+      margin:0;
+      font-size:18px;
+      line-height:1.15;
+      letter-spacing:.2px;
+      color:#111; /* keep simple for test */
+    }
+
+    .titles .sub{
+      margin-top:4px;
+      font-size:13px;
+      color:var(--muted);
+    }
+
+    .searchRow{
+      margin-top:10px;
+    }
+
+    .search{
+      display:flex;
+      align-items:center;
+      gap:10px;
+      padding:12px;
+      border-radius:16px;
+      background:rgba(255,255,255,.96);
+      border:1px solid rgba(0,0,0,.10);
+      box-shadow:0 10px 22px rgba(0,0,0,.08);
+    }
+
+    .search svg{
+      width:18px; height:18px;
+      fill:none;
+      stroke:rgba(0,0,0,.5);
+      stroke-width:2;
+      stroke-linecap:round;
+      stroke-linejoin:round;
+      flex:0 0 auto;
+    }
+
+    .search input{
+      border:0;
+      outline:0;
+      width:100%;
+      font-size:14px;
+      background:transparent;
+      color:var(--text);
+      min-width:0;
+    }
+    .search input::placeholder{ color:rgba(0,0,0,.38); }
+
+    .content{
+      padding:12px 16px 18px;
+    }
+
+    .sectionTitle{
+      display:flex;
+      justify-content:space-between;
+      gap:10px;
+      font-size:13px;
+      color:rgba(0,0,0,.70);
+      margin:2px 2px 10px;
+    }
+
+    .grid{
+      display:grid;
+      grid-template-columns:repeat(2, minmax(0,1fr));
+      gap:12px;
+    }
+
+    a.btn{
+      position:relative;
+      display:flex;
+      gap:12px;
+      padding:14px;
+      border-radius:20px;
+      text-decoration:none;
+      min-width:0;
+      -webkit-tap-highlight-color: transparent;
+
+      background:linear-gradient(180deg,var(--gold-1),var(--gold-2),var(--gold-3),var(--gold-4));
+      border:1px solid rgba(212,175,55,.28);
+      color:#111;
+
+      box-shadow: 0 14px 34px rgba(0,0,0,.14);
+      transition: transform .14s ease, filter .14s ease, box-shadow .14s ease;
+    }
+
+    a.btn::before{
+      content:"";
+      position:absolute;
+      inset:1px;
+      border-radius:inherit;
+      pointer-events:none;
+      background: linear-gradient(180deg, rgba(255,255,255,.50), rgba(255,255,255,.05) 42%, transparent 64%);
+      opacity:.60;
+      z-index:0;
+    }
+    a.btn > *{ position:relative; z-index:1; }
+
+    .icon{
+      width:40px;
+      height:40px;
+      border-radius:14px;
+      display:grid;
+      place-items:center;
+      flex:0 0 auto;
+
+      background:rgba(255,255,255,.9);
+      border:1px solid rgba(0,0,0,.06);
+      box-shadow: 0 8px 18px rgba(0,0,0,.12);
+    }
+
+    .icon svg{
+      width:18px; height:18px;
+      stroke:var(--gold-ink);
+      fill:none;
+      stroke-width:2;
+      stroke-linecap:round;
+      stroke-linejoin:round;
+    }
+
+    a.btn .txt{ min-width:0; }
+
+    a.btn strong{
+      display:-webkit-box;
+      -webkit-box-orient:vertical;
+      -webkit-line-clamp:2;
+      overflow:hidden;
+      font-size:15px;
+      font-weight:600;
+      line-height:1.2;
+      margin-top:1px;
+    }
+
+    a.btn span{
+      display:-webkit-box;
+      -webkit-box-orient:vertical;
+      -webkit-line-clamp:1;
+      overflow:hidden;
+      margin-top:6px;
+      font-size:12px;
+      color:rgba(0,0,0,.65);
+      line-height:1.35;
+    }
+
+    .hidden{ display:none !important; }
+
+    @media (max-width:420px){
+      a.btn{ padding:12px 10px; }
+      a.btn .icon{
+        position:absolute;
+        top:8px; left:8px;
+        width:28px; height:28px;
+        border-radius:12px;
+      }
+      a.btn .icon svg{ width:14px; height:14px; }
+      a.btn .txt{ padding-left:38px; }
+      a.btn strong{ font-size:13px; line-height:1.15; }
+      a.btn span{ font-size:11px; line-height:1.25; }
+    }
+
+    .note{
+      margin-top:14px;
+      padding-top:12px;
+      border-top:1px solid rgba(0,0,0,.07);
+      font-size:12px;
+      color:rgba(0,0,0,.58);
+      line-height:1.45;
     }
   </style>
 </head>
+
 <body>
-  FULL RED SCREEN TEST<br>
-  Cloudflare + iOS
+  <div class="wrap">
+    <div class="card">
+
+      <div class="header">
+        <div class="top">
+          <div class="logo">
+            <img src="icons/icon-192.png" alt="SEA Logo">
+          </div>
+          <div class="titles">
+            <h1>Singapore Estate Agency Pte Ltd</h1>
+            <div class="sub">Search → tap → done.</div>
+          </div>
+        </div>
+
+        <div class="searchRow">
+          <div class="search" role="search">
+            <svg viewBox="0 0 24 24" aria-hidden="true">
+              <circle cx="11" cy="11" r="7"></circle>
+              <path d="M21 21l-4.35-4.35"></path>
+            </svg>
+            <input id="q" type="search" inputmode="search" placeholder="Search forms (A1, A2, U5, LOI…)" autocomplete="off" />
+          </div>
+        </div>
+      </div>
+
+      <div class="content">
+        <div class="sectionTitle">
+          <div>SEA Compliance & Transaction Forms</div>
+          <div id="count" style="color:#999;"></div>
+        </div>
+
+        <div class="grid" id="grid">
+
+          <a class="btn" data-title="A1 – Customer Particulars" data-sub="Individuals"
+             href="https://www.connectinghomes.sg/mltf-form-a1" target="_blank" rel="noopener">
+            <div class="icon" aria-hidden="true">
+              <svg viewBox="0 0 24 24">
+                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+                <path d="M14 2v6h6"/>
+                <path d="M8 13h8"/>
+                <path d="M8 17h8"/>
+              </svg>
+            </div>
+            <div class="txt">
+              <strong>A1 – Customer Particulars</strong>
+              <span>Individuals</span>
+            </div>
+          </a>
+
+          <a class="btn" data-title="A2 – Entity / Legal Arrangement" data-sub="Company / Trust"
+             href="https://www.connectinghomes.sg/mltf-form-a2" target="_blank" rel="noopener">
+            <div class="icon" aria-hidden="true">
+              <svg viewBox="0 0 24 24">
+                <path d="M3 21h18"/>
+                <path d="M6 21V7a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v14"/>
+                <path d="M9 21v-4h6v4"/>
+                <path d="M10 9h4"/>
+                <path d="M10 12h4"/>
+              </svg>
+            </div>
+            <div class="txt">
+              <strong>A2 – Entity / Legal Arrangement</strong>
+              <span>Company / Trust</span>
+            </div>
+          </a>
+
+          <a class="btn" data-title="U5 – Risk Screening Checklist" data-sub="UCP / Compliance"
+             href="https://www.connectinghomes.sg/forms/u5" target="_blank" rel="noopener">
+            <div class="icon" aria-hidden="true">
+              <svg viewBox="0 0 24 24">
+                <path d="M12 2l7 4v6c0 5-3 9-7 10-4-1-7-5-7-10V6z"/>
+                <path d="M9 12l2 2 4-5"/>
+              </svg>
+            </div>
+            <div class="txt">
+              <strong>U5 – Risk Screening Checklist</strong>
+              <span>UCP / Compliance</span>
+            </div>
+          </a>
+
+          <a class="btn" data-title="Form 14 – LOI" data-sub="HDB / Private"
+             href="https://www.connectinghomes.sg/forms/f14" target="_blank" rel="noopener">
+            <div class="icon" aria-hidden="true">
+              <svg viewBox="0 0 24 24">
+                <path d="M4 4h16v16H4z"/>
+                <path d="M8 8h8"/>
+                <path d="M8 12h8"/>
+                <path d="M8 16h6"/>
+              </svg>
+            </div>
+            <div class="txt">
+              <strong>Form 14 – LOI</strong>
+              <span>HDB / Private</span>
+            </div>
+          </a>
+
+        </div>
+
+        <div class="note">
+          iPhone: Safari → Share → <strong>Add to Home Screen</strong>.
+          If the icon was wrong before, delete the old icon and add again.
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <script>
+    // ✅ TEST MODE: disable service worker to avoid caching confusion
+    // if ("serviceWorker" in navigator) {
+    //   navigator.serviceWorker.register("./service-worker.js").catch(()=>{});
+    // }
+
+    const q = document.getElementById("q");
+    const count = document.getElementById("count");
+    const allLinks = Array.from(document.querySelectorAll("#grid a.btn"));
+
+    function applySearch(){
+      const term = (q.value || "").trim().toLowerCase();
+      let visible = 0;
+
+      allLinks.forEach(a => {
+        const t = (a.getAttribute("data-title") || a.textContent || "").toLowerCase();
+        const s = (a.getAttribute("data-sub") || "").toLowerCase();
+        const ok = !term || t.includes(term) || s.includes(term);
+        a.classList.toggle("hidden", !ok);
+        if (ok) visible++;
+      });
+
+      count.textContent = term ? `${visible} match${visible===1?"":"es"}` : `${allLinks.length} items`;
+    }
+
+    q.addEventListener("input", applySearch);
+    applySearch();
+  </script>
 </body>
 </html>
