--- a/index.html
+++ b/index.html
@@ -290,7 +290,9 @@
       <div class="header">
         <div class="top">
           <div class="logo">
-            <img src="icons/icon-192.png" alt="SEA Logo">
+            <link rel="icon" href="/icons/icon-192.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-180.png">
+<img src="/icons/icon-192.png" alt="SEA Logo">
           </div>
           <div class="titles">
             <h1>Singapore Estate Agency Pte Ltd</h1>
@@ -421,3 +423,4 @@
   </script>
 </body>
 </html>
+
