--- a/index.html
+++ b/index.html
@@ -290,9 +290,9 @@
       <div class="header">
         <div class="top">
           <div class="logo">
-            <link rel="icon" href="/icons/icon-192.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-180.png">
-<img src="/icons/icon-192.png" alt="SEA Logo">
+            <link rel="icon" href="/icon-192.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/icon-180.png">
+<img src="/icon-192.png" alt="SEA Logo">
           </div>
           <div class="titles">
             <h1>Singapore Estate Agency Pte Ltd</h1>
@@ -423,4 +423,5 @@
   </script>
 </body>
 </html>
+
 
