--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 
   <!-- PWA -->
   <meta name="theme-color" content="#ff0000" />
-  <link rel="manifest" href="manifest.json">
-  <link rel="icon" href="icons/icon-192.png">
+  <link rel="manifest" href="/manifest.json?v=2">
+
+  <!-- Favicons / iOS icons (MUST be in head) -->
+  <link rel="icon" href="/icon-192.png?v=2">
+  <link rel="apple-touch-icon" sizes="180x180" href="/icon-180.png?v=2">
 
   <!-- iOS Home Screen -->
-  <link rel="apple-touch-icon" sizes="180x180" href="icons/icon-180.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-title" content="SEA Forms">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
@@ -34,7 +36,7 @@
 
     *{ box-sizing:border-box; }
 
-    /* ✅ FULL RED BACKGROUND TEST (no gradients, no pseudo layers) */
+    /* ✅ FULL RED BACKGROUND TEST */
     html, body{
       height:100%;
       margin:0;
@@ -43,7 +45,6 @@
       overscroll-behavior:none;
     }
 
-    /* make sure no previous background layer can appear */
     html::before, body::before{ content:none !important; background:none !important; }
 
     body{
@@ -74,8 +75,6 @@
       backdrop-filter: blur(12px);
       -webkit-backdrop-filter: blur(12px);
     }
-
-    /* Remove decorative background inside card too (keep it plain) */
     .card:before{ content:none !important; }
 
     .header{
@@ -103,12 +102,17 @@
       overflow:hidden;
       background:transparent;
       flex:0 0 auto;
+      position:relative;
+      z-index:10;
     }
+
     .logo img{
       width:100%;
       height:100%;
       object-fit:contain;
       display:block;
+      opacity:1 !important;
+      visibility:visible !important;
     }
 
     .titles h1{
@@ -116,7 +120,7 @@
       font-size:18px;
       line-height:1.15;
       letter-spacing:.2px;
-      color:#111; /* keep simple for test */
+      color:#111;
     }
 
     .titles .sub{
@@ -125,9 +129,7 @@
       color:var(--muted);
     }
 
-    .searchRow{
-      margin-top:10px;
-    }
+    .searchRow{ margin-top:10px; }
 
     .search{
       display:flex;
@@ -161,9 +163,7 @@
     }
     .search input::placeholder{ color:rgba(0,0,0,.38); }
 
-    .content{
-      padding:12px 16px 18px;
-    }
+    .content{ padding:12px 16px 18px; }
 
     .sectionTitle{
       display:flex;
@@ -290,9 +290,7 @@
       <div class="header">
         <div class="top">
           <div class="logo">
-            <link rel="icon" href="/icon-192.png?v=1">
-<link rel="apple-touch-icon" sizes="180x180" href="/icon-180.png?v=1">
-<img src="/icon-192.png?v=1" alt="SEA Logo">
+            <img src="/icon-192.png?v=2" alt="SEA Logo">
           </div>
           <div class="titles">
             <h1>Singapore Estate Agency Pte Ltd</h1>
@@ -318,7 +316,6 @@
         </div>
 
         <div class="grid" id="grid">
-
           <a class="btn" data-title="A1 – Customer Particulars" data-sub="Individuals"
              href="https://www.connectinghomes.sg/mltf-form-a1" target="_blank" rel="noopener">
             <div class="icon" aria-hidden="true">
@@ -381,7 +378,6 @@
               <span>HDB / Private</span>
             </div>
           </a>
-
         </div>
 
         <div class="note">
@@ -394,9 +390,9 @@
   </div>
 
   <script>
-    // ✅ TEST MODE: disable service worker to avoid caching confusion
+    // ✅ TEST MODE: keep service worker disabled
     // if ("serviceWorker" in navigator) {
-    //   navigator.serviceWorker.register("./service-worker.js").catch(()=>{});
+    //   navigator.serviceWorker.register("/service-worker.js").catch(()=>{});
     // }
 
     const q = document.getElementById("q");
@@ -423,6 +419,3 @@
   </script>
 </body>
 </html>
-
-
-
