--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>SEA Forms (RED TEST)</title>
+  <title>SEA Forms</title>
 
   <!-- PWA -->
-  <meta name="theme-color" content="#ff0000" />
+  <meta name="theme-color" content="#fdfaf3" />
   <link rel="manifest" href="/manifest.json?v=2">
 
-  <!-- Favicons / iOS icons (MUST be in head) -->
+  <!-- Favicons / iOS icons -->
   <link rel="icon" href="/icon-192.png?v=2">
   <link rel="apple-touch-icon" sizes="180x180" href="/icon-180.png?v=2">
 
@@ -36,12 +36,11 @@
 
     *{ box-sizing:border-box; }
 
-    /* ✅ FULL RED BACKGROUND TEST */
     html, body{
       height:100%;
       margin:0;
       padding:0;
-      background:#ff0000 !important;
+      background:#fdfaf3;
       overscroll-behavior:none;
     }
 
@@ -59,21 +58,17 @@
       max-width:820px;
       margin:0 auto;
       padding:
-        calc(18px + env(safe-area-inset-top))
-        16px
-        calc(34px + env(safe-area-inset-bottom));
+        calc(0px + env(safe-area-inset-top))
+        0px
+        calc(28px + env(safe-area-inset-bottom));
       display:block;
     }
 
+    /* ✅ Fixed: no empty CSS values */
     .card{
-      background:rgba(255,255,255,.92);
-      border:1px solid var(--stroke);
-      border-radius:var(--radius);
-      box-shadow:var(--shadow);
+      background:transparent;
       overflow:hidden;
       position:relative;
-      backdrop-filter: blur(12px);
-      -webkit-backdrop-filter: blur(12px);
     }
     .card:before{ content:none !important; }
 
@@ -81,23 +76,22 @@
       position:sticky;
       top:0;
       z-index:50;
-      padding:16px;
-      background:rgba(255,255,255,.96);
+      padding:10px 16px;
+      background:#ebe4d4;
       border-bottom:1px solid rgba(0,0,0,.06);
-      box-shadow: 0 12px 30px rgba(0,0,0,.08);
-      backdrop-filter: blur(16px);
-      -webkit-backdrop-filter: blur(16px);
+      box-shadow:0 12px 30px rgba(0,0,0,.08);
+      /* ✅ Removed backdrop-filter (not needed on solid bg) */
     }
 
     .top{
       display:flex;
-      gap:14px;
+      gap:10px;
       align-items:center;
     }
 
     .logo{
-      width:64px;
-      height:64px;
+      width:50px;
+      height:50px;
       border-radius:18px;
       overflow:hidden;
       background:transparent;
@@ -117,7 +111,7 @@
 
     .titles h1{
       margin:0;
-      font-size:18px;
+      font-size:16px;
       line-height:1.15;
       letter-spacing:.2px;
       color:#111;
@@ -129,13 +123,13 @@
       color:var(--muted);
     }
 
-    .searchRow{ margin-top:10px; }
+    .searchRow{ margin-top:1px; }
 
     .search{
       display:flex;
       align-items:center;
-      gap:10px;
-      padding:12px;
+      gap:8px;
+      padding:6px 10px;
       border-radius:16px;
       background:rgba(255,255,255,.96);
       border:1px solid rgba(0,0,0,.10);
@@ -180,11 +174,16 @@
       gap:12px;
     }
 
+    /* ✅ Mobile: 1 column */
+    @media (max-width:520px){
+      .grid{ grid-template-columns:1fr; }
+    }
+
     a.btn{
       position:relative;
       display:flex;
       gap:12px;
-      padding:14px;
+      padding:7px;
       border-radius:20px;
       text-decoration:none;
       min-width:0;
@@ -194,7 +193,7 @@
       border:1px solid rgba(212,175,55,.28);
       color:#111;
 
-      box-shadow: 0 14px 34px rgba(0,0,0,.14);
+      box-shadow:0 14px 34px rgba(0,0,0,.14);
       transition: transform .14s ease, filter .14s ease, box-shadow .14s ease;
     }
 
@@ -204,7 +203,7 @@
       inset:1px;
       border-radius:inherit;
       pointer-events:none;
-      background: linear-gradient(180deg, rgba(255,255,255,.50), rgba(255,255,255,.05) 42%, transparent 64%);
+      background:linear-gradient(180deg, rgba(255,255,255,.50), rgba(255,255,255,.05) 42%, transparent 64%);
       opacity:.60;
       z-index:0;
     }
@@ -217,10 +216,9 @@
       display:grid;
       place-items:center;
       flex:0 0 auto;
-
       background:rgba(255,255,255,.9);
       border:1px solid rgba(0,0,0,.06);
-      box-shadow: 0 8px 18px rgba(0,0,0,.12);
+      box-shadow:0 8px 18px rgba(0,0,0,.12);
     }
 
     .icon svg{
@@ -250,7 +248,7 @@
       -webkit-box-orient:vertical;
       -webkit-line-clamp:1;
       overflow:hidden;
-      margin-top:6px;
+      margin-top:1px;
       font-size:12px;
       color:rgba(0,0,0,.65);
       line-height:1.35;
@@ -259,15 +257,15 @@
     .hidden{ display:none !important; }
 
     @media (max-width:420px){
-      a.btn{ padding:12px 10px; }
+      a.btn{ padding:5px 5px; }
       a.btn .icon{
         position:absolute;
-        top:8px; left:8px;
+        top:5px; left:6px;
         width:28px; height:28px;
         border-radius:12px;
       }
-      a.btn .icon svg{ width:14px; height:14px; }
-      a.btn .txt{ padding-left:38px; }
+      a.btn .icon svg{ width:13px; height:13px; }
+      a.btn .txt{ padding-left:35px; }
       a.btn strong{ font-size:13px; line-height:1.15; }
       a.btn span{ font-size:11px; line-height:1.25; }
     }
@@ -304,7 +302,8 @@
               <circle cx="11" cy="11" r="7"></circle>
               <path d="M21 21l-4.35-4.35"></path>
             </svg>
-            <input id="q" type="search" inputmode="search" placeholder="Search forms (A1, A2, U5, LOI…)" autocomplete="off" />
+            <input id="q" type="search" inputmode="search"
+                   placeholder="Search forms (A1, A2, U5, LOI…)" autocomplete="off" />
           </div>
         </div>
       </div>
@@ -316,6 +315,7 @@
         </div>
 
         <div class="grid" id="grid">
+
           <a class="btn" data-title="A1 – Customer Particulars" data-sub="Individuals"
              href="https://www.connectinghomes.sg/mltf-form-a1" target="_blank" rel="noopener">
             <div class="icon" aria-hidden="true">
@@ -378,6 +378,7 @@
               <span>HDB / Private</span>
             </div>
           </a>
+
         </div>
 
         <div class="note">
@@ -411,7 +412,7 @@
         if (ok) visible++;
       });
 
-      count.textContent = term ? `${visible} match${visible===1?"":"es"}` : `${allLinks.length} items`;
+      count.textContent = term ? `${visible} match${visible===1 ? "" : "es"}` : `${allLinks.length} items`;
     }
 
     q.addEventListener("input", applySearch);
