--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <title>SEA Forms</title>
 
   <!-- PWA -->
-  <meta name="theme-color" content="#fdfaf3" />
+  <meta name="theme-color" content="#ebe4d4">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
   <link rel="manifest" href="/manifest.json?v=2">
 
   <!-- Favicons / iOS icons -->
