--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
        Slim buttons INSIDE sheet
        ========================= */
     .SEA_sheet a.btn{
-      padding:3px 10px;
+      padding:6px 10px;
       gap:10px;
       border-radius:16px;
       box-shadow:0 10px 22px rgba(0,0,0,.22);
@@ -500,18 +500,16 @@
       -webkit-line-clamp:1;
     }
 
-    /* =========================================================
-       LINK BUTTONS (super compact + always 3 per row)
-       ========================================================= */
+    /* ======== LINK BUTTONS (super compact + always 3 per row) ========= */
 
     /* ALWAYS 3-per-row for links (no mobile collapse) */
     .grid.linksGrid{
-      grid-template-columns:repeat(3, minmax(0,1fr));
+      grid-template-columns:repeat(4, minmax(0,1fr));
       margin-bottom:12px;
     }
     @media (max-width:520px){
       .grid.linksGrid{
-        grid-template-columns:repeat(3, minmax(0,1fr));
+        grid-template-columns:repeat(4, minmax(0,1fr));
       }
     }
 
@@ -525,6 +523,7 @@
       border-radius:13px;
       gap:4px;
       padding:6px;
+    height: 45px;
     }
     @media (max-width:420px){
       a.btn.linkBtn{
@@ -655,8 +654,7 @@
           </button>
         </div>
 
-        <!-- 3) LINKS + CLEAR -->
-        <div style="height:12px;"></div>
+       
 
         <!-- ✅ NEW: Quick Link title above link buttons -->
         <div class="sectionTitle">
@@ -1176,3 +1174,4 @@
   </script>
 </body>
 </html>
+
