--- a/index.html
+++ b/index.html
@@ -866,8 +866,7 @@
           
           
           <!-- HDB Portal -->
-          <a class="btn linkBtn"
-             href="https://homes.hdb.gov.sg/home/landing"
+          <a class="btn linkBtn" href="https://homes.hdb.gov.sg/home/landing"
              target="_blank"
              rel="noopener">
             <div class="icon">
@@ -969,7 +968,7 @@
     ];
 
     const TOOLS = [
-      { title:"CDD Form Checker", sub:"Quickly decide required forms", href:"https://www.connectinghomes.sg/cdd-form-chekcer",
+      { title:"CPF Full Retirement Sum Checker", sub:"Quickly decide required forms", href:"https://www.connectinghomes.sg/cpf-full-retirement-sum-calculator",
         icon:`<svg viewBox="0 0 24 24"><path d="M7 3h10a2 2 0 0 1 2 2v15a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2z"/><path d="M9 3h6v3H9z"/><path d="M8 10l1.5 1.5L12 9"/><path d="M8 14l1.5 1.5L12 13"/><path d="M14 10h4"/><path d="M14 14h4"/></svg>` },
       {
         title:"Stamp Duty Calculator",
@@ -1207,5 +1206,6 @@
   </script>
 </body>
 </html>
+
 
 
