--- a/index.html
+++ b/index.html
@@ -951,7 +951,7 @@
     ];
 
     const FORMS = [
-      { title:"CDD Form Checker", sub:"Which forms do I need?", href:"https://www.sea-sg.com/cdd-form-chekcer",
+      { title:"CDD Form Checker", sub:"Which forms do I need?", href:"https://www.sea-sg.com/cdd-form-checker",
         icon:`<svg viewBox="0 0 24 24"><path d="M7 3h10a2 2 0 0 1 2 2v15a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2z"/><path d="M9 3h6v3H9z"/><path d="M8 10l1.5 1.5L12 9"/><path d="M8 14l1.5 1.5L12 13"/><path d="M14 10h4"/><path d="M14 14h4"/></svg>` },
       { title:"A1 – Customer Particulars", sub:"Individuals", href:"https://www.sea-sg.com/mltf-form-a1",
         icon:`<svg viewBox="0 0 24 24"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/><path d="M14 2v6h6"/><path d="M8 13h8"/><path d="M8 17h8"/></svg>` },
@@ -1206,6 +1206,7 @@
   </script>
 </body>
 </html>
+
 
 
 
